fix spacing bug #90

--- a/assets/sass/_blog.sass
+++ b/assets/sass/_blog.sass
@@ -124,7 +124,7 @@
     border-radius: 5px
 
   &_title
-    margin: -1rem 0 1rem
+    margin: 1.75rem 0 1rem
 
   &_time
     background: var(--theme)
